--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "description": "Forkify Project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production"
   },
   "author": "Varun Joshi",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^4.29.0"
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1"
   },
-  "dependencies": {
-    "global": "^4.3.2",
-    "live-server": "^1.2.1"
-  }
+  "dependencies": {}
 }
