Add API call to fetch recipe, display in UI

--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,11 @@
 {
-    "preset": [
-        "env", {
-            "target": {
+    "presets": [
+        ["env", {
+            "targets": {
                 "browsers": [
                     "last 5 versions"
                 ]
             }
-        }
+        }]
     ]
 }
